--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <div class="row">
                 <div class="col-md-12 text-end ads  pt-5 pb-5">
                     <h1>الفرع الاول</h1>
-                    <h3><i class="fa-solid fa-location-dot"></i> 5 ش اسامة بن زيد-المنصورة محافظة الدقهلية </h3>
+                    <h3> 5 ش اسامة بن زيد-المنصورة محافظة الدقهلية <i class="fa-solid fa-location-dot"></i></h3>
                     <h1>الفرع الثاني</h1>
-                    <h3><i class="fa-solid fa-location-dot"></i> ش الدكتور سعيد خليف المحله الكبري </h3>
+                    <h3> ش الدكتور سعيد خليف المحله الكبري <i class="fa-solid fa-location-dot"></i></h3>
                     <h1>الفرع الثالث</h1>
-                    <h3><i class="fa-solid fa-location-dot"></i> المنوفيه مدينه تلا بجوار مسجد النوري </h3>
+                    <h3> المنوفيه مدينه تلا بجوار مسجد النوري <i class="fa-solid fa-location-dot"></i></h3>
                 </div>
             </div>
             <div class="row">
